# SimplePathTracer

./: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
